File reference fixes (#2)
* changing to postgres

* Added some more configuration and skeleton things

* Just needed a checkpoints

* Insert Boss works

* something I don't fully remember

* Started Item functionality. Attempting to pull all items droppable by a boss by boss name. Not working with multiple items yet.

* getAllItemsByBossName now pulling multiple items as intended.

* Moved boss drop pool query functionality to boss.

* Moved boss drop pool query functionality to boss.

* Add /drops/kill/log to allow recording of a kill.

* Add /drops/kill/log/drop to allow recording of a drop for a kill.

* Add endpoint for pulling bosses for current league

* Minor changes to drop logic

* Minor changes to drop logic again. Added "get all kills by boss/user" query.

* rolled back spring for swagger support

* - Small amount of refactoring
- added new endpoint for logging a kill and all drops together
- added .sql to the remaining sql files

* - Added Apache utils
- Added logic for getting all bosses by league name and made the default behavior get the current league

* - Updated documentation sources for Swagger to exclude default error handler and group the drop controller better

* - Added endpoint to boss controller from item controller for making a new item and checking for duplicates
- Added get all drops by boss id instead of by boss name to align with the other endpoints

* - Removed initial drop logging endpoints

* - Attempted fix for file references in google cloud run

* - Attempted fix for file references in google cloud run

* Delete GetAllDrops.sql

removing empty files again

* Delete GetAllDropsByBoss.sql

removing empty file again

Co-authored-by: David <dgilbert230@gmail.com>