@@ -1,15 +1,12 @@
 package com.poebossdrops.items;
 
-import com.poebossdrops.dto.Item;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.ClassPathResource;
-import org.springframework.jdbc.core.BeanPropertyRowMapper;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
 
-import java.io.File;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
@@ -27,8 +24,8 @@ public class ItemRepository {
         sqlParams.put("itemName", itemName);
 
         try{
-            File sqlFile = new ClassPathResource("sql/items/InsertItem.sql").getFile();
-            String sql = new String(Files.readAllBytes(sqlFile.toPath()));
+            InputStream sqlInputStream = new ClassPathResource("sql/items/InsertItem.sql").getInputStream();
+            String sql = new String(sqlInputStream.readAllBytes());
             jdbcTemplate.update(sql, sqlParams);
         } catch (Exception exception){
             log.error("Error while trying to create a new item " + itemName);
